<resources>
    <string name="app_name">ProyectoSemana2C3</string>
    <string name="nombre">Nombre Completo</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="seleccionarFecha">Seleccionar</string>
    <string name="descripcion">Descripción contacto</string>
    <string name="fecha">Fecha de nacimiento</string>
    <string name="tel">Tel.</string>
    <string name="emailA2">Email:</string>
    <string name="descA2">Descripción:</string>

    <string name="vFecha">Jan 01, 1900</string>
    <string name="vNombre">vNombre</string>
    <string name="vTelefono">vTelefono</string>
    <string name="vEmail">vEmail</string>
    <string name="vDescripcion">vDescripcion</string>
    <string name="fechaA2">Fecha de nacimiento: </string>

    <string name="btnEditarDatos">Editar Datos</string>
    <string name="btnSiguiente">SIGUIENTE</string>
</resources>
